Fix like button alignment

--- a/react/app-main/components/ResourceTile/resource-tile.css
+++ b/react/app-main/components/ResourceTile/resource-tile.css
@@ -85,6 +85,7 @@
 }
 
 .resource-tile__like-resource-button {
+    padding-top: 3px;
     cursor: pointer;
 }
 
